--- a/package.json
+++ b/package.json
@@ -2,5 +2,12 @@
   "name": "@okmeme/server",
   "version": "0.0.1",
   "repository": "git@github.com:okmeme/server.git",
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "@grpc/grpc-js": "^1.3.7",
+    "@grpc/proto-loader": "^0.6.5",
+    "@okmeme/shared": "^0.1.0",
+    "cors-anywhere": "^0.4.4",
+    "typescript": "^4.4.3"
+  }
 }
